# terminaltodo

./: CMakeLists.txt  LICENSE  MainWindow.cpp  MainWindow.h  Readme.md  ServiceContainer.cpp  ServiceContainer.h  TODOElement.h  TodoService.cpp  TodoService.h  main.cpp
res/: config.ini
src/: Logger.cpp  Logger.h  ServiceContainer.cpp  ServiceContainer.h  main.cpp
src/DTO/: PomodoroPhases.h  Priority.h  TODOElement.h  TodoContainer.h  WindowState.h
src/Exceptions/: IOException.h
src/Interfaces/: IConfigService.h  ISerializable.h  ITodoService.h  IWindowStateHandler.h
src/Services/: AudioService.cpp  AudioService.h  CommandProcessor.cpp  CommandProcessor.h  ConfigService.cpp  ConfigService.h  Formatter.cpp  Formatter.h  PomodoroService.cpp  PomodoroService.h  StorageService.cpp  StorageService.h  TimedScreenRefresher.cpp  TimedScreenRefresher.h  TodoService.cpp  TodoService.h  WindowStateHandler.cpp  WindowStateHandler.h
src/UI/: HelpRenderer.cpp  HelpRenderer.h  MainWindow.cpp  MainWindow.h  PomodoroRenderer.cpp  PomodoroRenderer.h  Renderer.h  TodoRenderer.cpp  TodoRenderer.h
tests/: ServiceContainerTest.cpp
tests/Services/: CommandProcessorTest.cpp  ConfigServiceTest.cpp  FormatterTest.cpp  PomodoroServiceTest.cpp  StorageServiceTest.cpp  TodoServiceTest.cpp  WindowStateHandlerTest.cpp
